# type-project

./: .pre-commit-config.yaml  main.py  pyproject.toml
tests/: test_parser.py
type_project/: ast.py  parser.py  parser_utility.py
