[tool.poetry]
name = "type-project2"
version = "0.1.0"
description = ""
authors = ["goya813 <wasabibeef@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nompy = { git = "https://github.com/higumachan/nompy.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
